; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/tar/extr_bsdtar.c_only_mode.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/tar/extr_bsdtar.c_only_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bsdtar = type { i32 }

@.str = private unnamed_addr constant [39 x i8] c"Option %s is not permitted in mode -%c\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bsdtar*, i8*, i8*)* @only_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @only_mode(%struct.bsdtar* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.bsdtar*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.bsdtar* %0, %struct.bsdtar** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = load %struct.bsdtar*, %struct.bsdtar** %4, align 8
  %9 = getelementptr inbounds %struct.bsdtar, %struct.bsdtar* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32* @strchr(i8* %7, i32 %10)
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %19

13:                                               ; preds = %3
  %14 = load i8*, i8** %5, align 8
  %15 = load %struct.bsdtar*, %struct.bsdtar** %4, align 8
  %16 = getelementptr inbounds %struct.bsdtar, %struct.bsdtar* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @lafe_errc(i32 1, i32 0, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i8* %14, i32 %17)
  br label %19

19:                                               ; preds = %13, %3
  ret void
}

declare dso_local i32* @strchr(i8*, i32) #1

declare dso_local i32 @lafe_errc(i32, i32, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
